syntax = "proto3";

package conveyor_etl.raft;

service RaftService {
    rpc Vote(VoteRequest) returns (VoteResponse);
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

message VoteRequest {
    bytes vote = 1;
    optional bytes last_log_id = 2;
}

message VoteResponse {
    bytes vote = 1;
    bool vote_granted = 2;
    optional bytes last_log_id = 3;
}

message AppendEntriesRequest {
    bytes vote = 1;
    optional bytes prev_log_id = 2;
    repeated bytes entries = 3;
    optional bytes leader_commit = 4;
}

message AppendEntriesResponse {
    bytes vote = 1;
    bool success = 2;
    optional bytes conflict = 3;
}

message InstallSnapshotRequest {
    bytes vote = 1;
    bytes meta = 2;
    uint64 offset = 3;
    bytes data = 4;
    bool done = 5;
}

message InstallSnapshotResponse {
    bytes vote = 1;
}
